src/components/home/home.scss
@import '../../styles/styles.scss';

$featureblocks-bg-color: #1C1819;

[class^=section-] {
    .feature-block {
        width: 100%;
        max-width: 1200px;
        margin: 0 auto;
    }

}
.section-1 {
    background-size: 2rem;
    background-color: #f8f8f8;
    @media (min-width: 768px) {
        height: 727.5px;
        padding: 3em 0;
        margin-top: -7.2%;
    }
    @include phone {
        height: 341px;
        margin-top: -7.1%;
    }
    
    .home-text-wrapper {
        background: #f8f8f8;
        padding-top: 0;
        @media (min-width: 768px) {
            width: 60%;
            color: #333333;
            font-size: 2.25rem;
            line-height: 72px;
            text-align: center;
            margin: 0 auto;
        }
        @include phone {
            width: 89%;
            font-size: 1.25rem;
            color: #1B252F;
            line-height: 32px;
            margin: 2em auto;
        }
        & > .contact-link {
            margin-top: 3em;
            height: 72px;
            width: 380px;
            padding: 0;
            display: flex;
            place-content: center;
            place-items: center;
            border: 1px solid #1B252F;
            color: #1B252F;
            font-size: 1rem;
            font-weight: bold;
            letter-spacing: 3.29px;
            line-height: 24px;
            text-align: center;
            @media (max-width: 767px) {
                display: none;
            }
        }
        
    }
}
.section-2 {
    background: radial-gradient(circle, #6A6A6A 0%, rgba(12,12,12,0) 100%);
    background-color: #1C1819;
    // top: -129px;
    @media (max-width: 767px) {
        margin-top: -7.2%;
    }
    @media (min-width: 768px) {
        margin-top: -7.2%;
    }

    .case-study-1 {

            .feature-block-image {
                justify-items: center;

                @include desktop {
                    // width: 100% !important;
                }
                @include tablet {
                    width: 40%;
                }
                @include phone {
                    width: 48%;
                }   
            }
    }
}
.section-3 {
    background: radial-gradient(circle, rgba(62,62,62,0.52) 0%, rgba(12,12,12,0.38) 100%);
    background-color: #1C1819;
    @media (max-width: 767px) {
        margin-top: -7.2%;
    }
    @media (min-width: 768px) {
        margin-top: -7.2%;
    }

    .case-study-2 {

        @include desktop {
            padding: 10em 0;
            justify-items: center;
            max-width: 1200px;

            .feature-block-image {
                margin-left: 0;
                position: relative;
                left: 15.5%;
            }
            .feature-block-details {
                position: relative;
                left: 6em;
            }
        }
        @include tablet {
            .feature-block-image {
                // width: 80%;
                margin-left: 0;
                position: relative;
                left: 12em;
            }
            .feature-block-details {
                position: relative;
                left: 12em;
            }
        }
        @include phone {
            .feature-block-image {
                width: 80%;
            }
        }
    }

}
.section-4 {
    flex-direction: column;
    height: 876.28px;
    padding-bottom: 20em;
    background: radial-gradient(circle, rgba(255,255,255,0.52) 0%, rgba(86,86,86,0.52) 45.07%, rgba(12,12,12,0) 100%);
    background-color: #1C1819;
    @media (max-width: 767px) {
        margin-top: -7.2%;
    }
    @media (min-width: 768px) {
        margin-top: -7.2%;
    }

    @include tablet {
        height: auto;
        padding-bottom: 10em;
    }
    @include phone {
        height: auto;
        padding-bottom: 5em;
    }

    & > .case-study-3 {

        @include desktop {
            &.feature-block {
                &.feature-image-left {
                    position: relative;
                    left: -270px !important;
                }
                
                & > .feature-block-image {
                    position: relative;
                    margin: unset;
                    left: -100px;
                }
                & > .feature-block-details {
                    position: relative;
                    margin-left: 94px;
                }
            }
        }
        @include phone {
            .feature-block-image {
                width: 120%;
                justify-items: center;
            }
        }
    }

    .view-portfolio-link {
        display: block;
        margin: 0 auto;
        text-decoration: none;
        height: 24px;
        width: 380px;
        color: #FFFFFF;
        font-size: 1rem;
        font-weight: bold;
        letter-spacing: 3.29px;
        line-height: 24px;
        text-align: center;
        padding: 1.75em 0;
        @include phone {
            margin-bottom: 7em;
        }
    }
}
.section-5 {
    background-color: #FFFFFF;
    @media (max-width: 767px) {
        margin-top: -7.2%;
        padding: 123px 0 100px;
    }
    @media (min-width: 768px) {
        margin-top: -7.2%;
    }
}

